--- a/SH-Photography-UI-Net/ClientApp/package.json
+++ b/SH-Photography-UI-Net/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SH_Photography_UI_Net",
+  "name": "sh_photography_ui_net",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,22 +20,15 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^3.0.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
-    "ajv": "^6.10.0",
-    "babel-eslint": "^7.2.3",
+    "ajv": "^6.10.2",
     "cross-env": "^5.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.14.2",
     "moxios": "^0.4.0"
   },
   "eslintConfig": {
@@ -47,5 +40,17 @@
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
