--- a/SH-Photography-UI-Net/ClientApp/package.json
+++ b/SH-Photography-UI-Net/ClientApp/package.json
@@ -16,6 +16,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-images": "^1.0.0",
+    "react-meta-tags": "^0.7.4",
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
