Move web.config

--- a/SH-Photography-UI-Net/SH-Photography-UI-Net.csproj
+++ b/SH-Photography-UI-Net/SH-Photography-UI-Net.csproj
@@ -27,6 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="ClientApp\public\web.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="compilerconfig.json" />
   </ItemGroup>
 
